[gd_scene load_steps=4 format=2]

[ext_resource path="res://TabScreens/journalreader/JournalReader.gd" type="Script" id=1]
[ext_resource path="res://TabScreens/journalreader/JournalEvent.tscn" type="PackedScene" id=2]
[ext_resource path="res://TabScreens/DefaultTheme.tres" type="Theme" id=3]

[node name="JournalReader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogDetailContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LogDetailContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0

[node name="ToolBarContainer" type="HBoxContainer" parent="LogDetailContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 40.0

[node name="ClearDatabase" type="ToolButton" parent="LogDetailContainer/VBoxContainer/ToolBarContainer"]
margin_right = 94.0
margin_bottom = 40.0
hint_tooltip = "Clears the database and re-import all data"
text = "Clear Database"

[node name="DisplayByEventFile" type="CheckButton" parent="LogDetailContainer/VBoxContainer/ToolBarContainer"]
margin_left = 98.0
margin_right = 244.0
margin_bottom = 40.0
text = "Show by file"

[node name="EventTypeFilter" type="MenuButton" parent="LogDetailContainer/VBoxContainer/ToolBarContainer"]
margin_left = 248.0
margin_right = 334.0
margin_bottom = 40.0
text = "Filter By type"
items = [ "Item 0", null, 1, false, false, 0, 0, null, "", false, "Item 1", null, 1, false, false, 1, 0, null, "", false, "Item 2", null, 1, false, false, 2, 0, null, "", false ]

[node name="HBoxContainer" type="HBoxContainer" parent="LogDetailContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogEntries" type="ItemList" parent="LogDetailContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 200.0
margin_bottom = 546.0
rect_min_size = Vector2( 200, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="LogDetailContainer/VBoxContainer/HBoxContainer"]
margin_right = 1014.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="LogDetails" type="VBoxContainer" parent="LogDetailContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 1014.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventItem" parent="LogDetailContainer/VBoxContainer/HBoxContainer/ScrollContainer/LogDetails" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1014.0
margin_bottom = 40.0

[node name="EventItem2" parent="LogDetailContainer/VBoxContainer/HBoxContainer/ScrollContainer/LogDetails" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 1014.0
margin_bottom = 84.0

[connection signal="pressed" from="LogDetailContainer/VBoxContainer/ToolBarContainer/ClearDatabase" to="." method="_on_ClearDatabase_pressed"]
[connection signal="toggled" from="LogDetailContainer/VBoxContainer/ToolBarContainer/DisplayByEventFile" to="." method="_on_DisplayByEventFile_toggled"]
[connection signal="item_selected" from="LogDetailContainer/VBoxContainer/HBoxContainer/LogEntries" to="." method="_on_LogEntries_item_selected"]
